--- a/src/main/resources/templates/admin_order.html
+++ b/src/main/resources/templates/admin_order.html
@@ -6,6 +6,37 @@
 </head>
 <body>
 <h3>Заказы</h3>
+<h3>Cортировка, поиск, фильтрация</h3>
+<form th:method="POST" th:action="@{/admin/order}">
+    <fieldset>
+        <legend>Выберите параметры для сортировки, поиска, фильтрации:</legend>
+        <label for="search">Поиск по наименованию</label>
+        <input type="text" id="search" name="search" th:value="*{value_search}">
+        <br>
+
+            <br>
+            <input type="submit" value="Найти">
+        </div>
+    </fieldset>
+</form>
+<hr>
+<h3>Результат поиска, сортировки, фильтрации</h3>
+
+<h3>Заказы: </h3>
+<div th:each="order : ${search_order}">
+    <h3 th:text="'Заказ №' + ${order.getNumber()}"></h3>
+    <img th:src="'/img/' + ${order.getProduct().getImageList()[0].getFileName()}" width="50px">
+    <p th:text="'Наименование: ' + ${order.getProduct().getTitle()}">
+    <p th:text="'Количество: ' + ${order.getCount()}">
+    <p th:text="'Цена: ' + ${order.getPrice()}">
+    <p th:text="'Дата заказа: ' + ${#temporals.format(order.getDateTime(), 'dd-MMM-yyyy')}"></p>
+    <p th:text="'Cтатус: ' + ${order.getStatus()}">
+    </p>
+    <a th:href="@{/admin/order/{id}(id=${order.getId()})}">Изменить статус заказа</a>
+
+    <p th:text="'Пользователь: ' + ${order.getPerson().getId()}">
+    </p>
+</div>
 <div th:each="order : ${orders}">
     <h3 th:text="'Заказ №' + ${order.getNumber()}"></h3>
     <img th:src="'/img/' + ${order.getProduct().getImageList()[0].getFileName()}" width="50px">
